--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,8 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "noUnusedLocals": false, // Disable unused locals checking
+    "noUnusedParameters": false, // Disable unused parameters checking
     "plugins": [
       {
         "name": "next"
